<resources>
    <string name="app_name">To Do</string>
    <string name="string_priority">Priority</string>
    <string name="string_title">Title</string>
    <string name="string_description">Description</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="_one">1</string>
    <string name="save">Save</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="rate_me">Rate Me</string>


</resources>
